update all project fonts

--- a/html/flex-it/css/main-LTR.css
+++ b/html/flex-it/css/main-LTR.css
@@ -73,8 +73,8 @@ Template Description: IT Solutions & Business Services Responsive HTML5 Bootstra
   /*================  warning-color values */
   --clr-warning: #9b6a01;
   --clr-warning-rgb: 155, 106, 1;
-  --ltr-main-font-f: "Jost", "sans-serif";
-  --rtl-main-font-f: "Tajawal", "sans-serif";
+  --ltr-main-font-f: "Montserrat", "sans-serif";
+  --rtl-main-font-f: "Montserrat", "sans-serif";
 }
 
 /*========== Start Global Rules ==========*/
